--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
+    "framer-motion": "^10.17.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "sass": "^1.69.6"
   },
   "devDependencies": {
